Fixed z-indexes

--- a/sites/goodmoves/main.scss
+++ b/sites/goodmoves/main.scss
@@ -82,7 +82,7 @@ body {
 }
 .mdc-top-app-bar {
   background-color: white;
-  z-index: 5 !important;
+  z-index: 5;
 }
 h1,
 h2,
@@ -483,6 +483,9 @@ footer h3,
   padding-bottom: $unit;
   border-right: none;
   background-color: white !important;
+}
+.mdc-dialog {
+  z-index: 2;
 }
 .mdc-dialog__backdrop {
   z-index: 10;
@@ -1697,7 +1700,7 @@ body.shortlist {
   position: relative;
   max-width: 1200px;
   align-items: flex-end;
-  z-index: 1;
+  z-index: 4;
   .mdc-tab-bar {
     width: 100%;
   }
@@ -2515,7 +2518,7 @@ footer.mdc-layout__footer {
   background-color: $mdc-theme-footer;
   box-shadow: $toolbar-shadow-reverse;
   position: relative;
-  z-index: 4;
+  z-index: 3;
   p, li, div {
     font-family: $footer-font-family;
     font-weight: $footer-font-weight;
